--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Mateusz Szymański",
   "license": "MIT",
   "dependencies": {
-    "express": "4.14.0"
+    "express": "4.14.0",
+    "flickrapi": "0.5.0",
+    "underscore": "1.8.3"
   }
 }
