--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "4.14.0",
     "flickrapi": "0.5.0",
+    "mongoose": "4.5.6",
     "underscore": "1.8.3"
   }
 }
